# rpc2-rs

./: .gitattributes  .gitconfig  .gitignore  Cargo.toml  README.md  make_dist.sh
example_plugin/: Cargo.toml
example_plugin/src/: large_data.txt  lib.rs
interface/: Cargo.toml
interface/src/: builtin.rs  lib.rs
lua/: README.md  loader_stub.lua  rpc2-server.lua  rpc2.lua  rpc2_websocket.lua  rpc2_workspacefs.lua  rpc2ev.lua  rpc2obj.lua
plugin_debug_server/: Cargo.toml
plugin_debug_server/src/: main.rs
plugins/example/: Cargo.toml  README.md
plugins/example/src/: builtin.rs  lib.rs  sabi.rs
plugins/websocket/: Cargo.toml
plugins/websocket/src/: builtin.rs  lib.rs
plugins/workspacefs/: Cargo.toml  README.md
plugins/workspacefs/src/: builtin.rs  lib.rs  sabi.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
workspacefs_plugin/: Cargo.toml
workspacefs_plugin/src/: lib.rs
