[package]
name = "plugin_debug_server"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.11.3"
clap = { version = "4.5.23", features = ["derive"] }
clio = "0.3.5"
rpc2_interface = { version = "0.1.0", path = "../interface" }
rpc2_server = { version = "0.2.0", path = "../server" }
serde_json = "1.0.133"
