[package]
name = "plugin_debug_server"
version = "0.2.0"
edition = "2024"

[dependencies]
abi_stable = { version = "0.11.3", optional = true }
clap = { version = "4.5.23", features = ["derive"] }
clio = "0.3.5"
rpc2_interface = { version = "0.2.0", path = "../interface", default-features = false }
rpc2_server = { version = "0.2.0", path = "../server", default-features = false }
serde_json = "1.0.133"
# plugins
rpc2_plugin_example = { version = "0.2.0", path = "../plugins/example", default-features = false }
rpc2_plugin_workspacefs = { version = "0.2.0", path = "../plugins/workspacefs", default-features = false }
rpc2_plugin_websocket = { version = "0.2.0", path = "../plugins/websocket", default-features = false }

[features]
sabi = ["dep:abi_stable","rpc2_interface/sabi","rpc2_server/sabi","rpc2_plugin_workspacefs/sabi","rpc2_plugin_websocket/sabi"]
