[package]
name = "rpc2_server"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.11.3"
clap = { version = "4.5.23", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
notify = "7.0.0"
png = "0.17.15"
regex = "1.11.1"
rpc2_interface = { version = "0.1.0", path = "../interface" }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros","rt","rt-multi-thread"] }
