[package]
name = "rpc2_server"
version = "0.2.0"
edition = "2021"

[dependencies]
abi_stable = "0.11.3"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
futures-core = "0.3.31"
json = "0.12.4"
notify = "8.0.0"
regex = "1.11.1"
rpc2_interface = { version = "0.1.0", path = "../interface" }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros","rt","rt-multi-thread"] }
