[package]
name = "rpc2_server"
version = "0.2.0"
edition = "2024"

[dependencies]
abi_stable = { version = "0.11.3", optional = true }
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
core_extensions = { version = "1.5.3", features = ["std", "all_items"] }
futures-core = "0.3.31"
json = "0.12.4"
notify = "8.0.0"
regex = "1.11.1"
rpc2_interface = { version = "0.2.0", path = "../interface" }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros","rt","rt-multi-thread"] }
# plugins
rpc2_plugin_example = { version = "0.2.0", path = "../plugins/example", default-features = false }
rpc2_plugin_workspacefs = { version = "0.2.0", path = "../plugins/workspacefs", default-features = false }
rpc2_plugin_websocket = { version = "0.2.0", path = "../plugins/websocket", default-features = false }
chrono = "0.4.41"

[features]
sabi = ["dep:abi_stable","rpc2_interface/sabi", "rpc2_plugin_workspacefs/sabi", "rpc2_plugin_websocket/sabi"]
