[package]
name = "rpc2_plugin_workspacefs"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
abi_stable = { version = "0.11.3", optional = true }
base64 = "0.22.1"
dirs = "6.0.0"
native-dialog = "0.9.0"
rpc2_interface = { version = "0.2.0", path = "../../interface", default-features = false }
serde_json = "1.0.133"

[features]
sabi = ["dep:abi_stable","rpc2_interface/sabi"]
